--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,15 @@
 h1  {
-  font-size: larger;
-  color: purple;
+  color: #498c13;
+  text-align: center;
+  font-family: fantasy;
+}
+
+.center_element {
+  text-align: center;
+}
+
+h2{
+  font-size: medium;
+  text-align: center;
+  color: #ca9816;
 }
