--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ h1  {
 h2{
   font-size: medium;
   text-align: center;
-  color: #ca9816;
+  color: #dfd021;
 }
 
 .column {
@@ -22,4 +22,11 @@ h2{
 .column2  {
   width: 300px;
   float: right;
+}
+
+.about_me {
+  margin: 12px;
+  border: 2px solid #498c13;
+  padding: 4px;
+  background-color: black;
 }
