--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ h2{
   width: 50%;
   border: solid black;
   border-width: 1px;
-  background-color: orange;
+  background-color: yellow;
   margin-bottom: 10px;
   box-sizing: border-box;
 }
